# liblogicalaccess

./: .clang-format  .gitignore  .gitmodules  .tgitconfig  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.android  GitVersion.yml  Jenkinsfile  LICENSE.LibLogicalAccess.txt  README.md  appveyor.yml  assembly.xml  build_doc.sh  conanfile.py  liblogicalaccess.config  pom.xml  proto_gen.sh  sonar-project.properties  version.cmake  version.cmake.template
Plugins/PluginsCards/: CMakeLists.txt
Plugins/PluginsCards/DESFire/: CMakeLists.txt  DESFireAccessInfo.h  DESFireAccessInfos.cpp  DESFireCardProvider.cpp  DESFireCardProvider.h  DESFireChip.cpp  DESFireChip.h  DESFireCommands.h  DESFireCrypto.cpp  DESFireCrypto.h  DESFireEV1CardProvider.cpp  DESFireEV1CardProvider.h  DESFireEV1Chip.cpp  DESFireEV1Chip.h  DESFireEV1Commands.h  DESFireEV1Location.cpp  DESFireEV1Location.h  DESFireEV1Profile.cpp  DESFireEV1Profile.h  DESFireKey.cpp  DESFireKey.h  DESFireLocation.cpp  DESFireLocation.h  DESFireProfile.cpp  DESFireProfile.h  LibraryEntry.cpp  desfirechip.hpp  desfirecommands.hpp  desfirecrypto.hpp  desfireev1location.hpp  desfireev1profile.hpp  desfirekey.hpp  desfirelocation.hpp  desfireprofile.hpp
Plugins/PluginsCards/EM4102/: CMakeLists.txt  EM4102Chip.cpp  EM4102Chip.h  LibraryEntry.cpp  em4102chip.hpp
Plugins/PluginsCards/EM4135/: CMakeLists.txt  EM4135Chip.cpp  EM4135Chip.h  LibraryEntry.cpp  em4135chip.hpp
Plugins/PluginsCards/GenericTag/: CMakeLists.txt  GenericTagAccessControlCardService.cpp  GenericTagAccessControlCardService.h  GenericTagCardProvider.cpp  GenericTagCardProvider.h  GenericTagChip.cpp  GenericTagChip.h  LibraryEntry.cpp  generictagaccesscontrolcardservice.hpp  generictagchip.hpp
Plugins/PluginsCards/ISO15693/: CMakeLists.txt  ISO15693CardProvider.cpp  ISO15693CardProvider.h  ISO15693Chip.cpp  ISO15693Chip.h  ISO15693Commands.h  ISO15693Location.cpp  ISO15693Location.h  ISO15693Profile.cpp  ISO15693Profile.h  LibraryEntry.cpp  iso15693chip.hpp  iso15693commands.hpp  iso15693profile.hpp
Plugins/PluginsCards/ISO7816/: CMakeLists.txt  ISO7816CardProvider.cpp  ISO7816CardProvider.h  ISO7816Chip.cpp  ISO7816Chip.h  ISO7816Commands.h  ISO7816Location.cpp  ISO7816Location.h  ISO7816Profile.cpp  ISO7816Profile.h  LibraryEntry.cpp  iso7816cardprovider.hpp  iso7816location.hpp
Plugins/PluginsCards/Indala/: CMakeLists.txt  IndalaChip.cpp  IndalaChip.h  LibraryEntry.cpp
Plugins/PluginsCards/InfineonMYD/: CMakeLists.txt  InfineonMYDChip.cpp  InfineonMYDChip.h  LibraryEntry.cpp  infineonmydchip.hpp
Plugins/PluginsCards/LegicPrime/: CMakeLists.txt  LegicPrimeChip.cpp  LegicPrimeChip.h  LibraryEntry.cpp
Plugins/PluginsCards/Mifare/: CMakeLists.txt  LibraryEntry.cpp  Mifare1KChip.cpp  Mifare1KChip.h  Mifare4KChip.cpp  Mifare4KChip.h  MifareAccessInfo.h  MifareAccessInfos.cpp  MifareCardProvider.cpp  MifareCardProvider.h  MifareChip.cpp  MifareChip.h  MifareCommands.h  MifareKey.cpp  MifareKey.h  MifareLocation.cpp  MifareLocation.h  MifareProfile.cpp  MifareProfile.h  mifare1kchip.hpp  mifare4kchip.hpp  mifareaccessinfo.hpp  mifarechip.hpp  mifarecommands.hpp  mifarekey.hpp  mifaremocation.hpp
Plugins/PluginsCards/MifarePlus/: CMakeLists.txt  LibraryEntry.cpp  MifarePlus2KChip.cpp  MifarePlus2KChip.h  MifarePlus4KChip.cpp  MifarePlus4KChip.h  MifarePlusAccessInfo.h  MifarePlusAccessInfos.cpp  MifarePlusCardProviderSL1.cpp  MifarePlusCardProviderSL1.h  MifarePlusCardProviderSL3.cpp  MifarePlusCardProviderSL3.h  MifarePlusChip.cpp  MifarePlusChip.h  MifarePlusCommandSL1.h  MifarePlusCommands.cpp  MifarePlusCommands.h  MifarePlusCommandsSL3.h  MifarePlusCrypto.cpp  MifarePlusCrypto.h  MifarePlusKey.cpp  MifarePlusKey.h  MifarePlusLocation.cpp  MifarePlusLocation.h  MifarePlusProfile.cpp  MifarePlusProfile.h  MifarePlusProfileSL1.cpp  MifarePlusProfileSL1.h  MifarePlusProfileSL3.cpp  MifarePlusProfileSL3.h  mifareplus4kchip.hpp  mifareplusaccessinfo.hpp  mifarepluscardprovidersl1.hpp  mifarepluscommands.hpp  mifarepluscommandssl3.hpp  mifareplusprofilesl1.hpp
Plugins/PluginsCards/MifareUltralight/: CMakeLists.txt  LibraryEntry.cpp  MifareUltralightAccessInfo.h  MifareUltralightAccessInfos.cpp  MifareUltralightCAccessInfo.h  MifareUltralightCAccessInfos.cpp  MifareUltralightCCardProvider.cpp  MifareUltralightCCardProvider.h  MifareUltralightCChip.cpp  MifareUltralightCChip.h  MifareUltralightCCommands.h  MifareUltralightCProfile.cpp  MifareUltralightCProfile.h  MifareUltralightCardProvider.cpp  MifareUltralightCardProvider.h  MifareUltralightChip.cpp  MifareUltralightChip.h  MifareUltralightCommands.h  MifareUltralightLocation.cpp  MifareUltralightLocation.h  MifareUltralightProfile.cpp  MifareUltralightProfile.h  mifareultralightccardprovider.hpp  mifareultralightcchip.hpp  mifareultralightccommands.hpp  mifareultralightchip.hpp  mifareultralightprofile.hpp
Plugins/PluginsCards/Prox/: CMakeLists.txt  LibraryEntry.cpp  ProxAccessControlCardService.cpp  ProxAccessControlCardService.h  ProxCardProvider.cpp  ProxCardProvider.h  ProxChip.cpp  ProxChip.h  ProxLocation.cpp  ProxLocation.h  ProxProfile.cpp  (+3 more)
plugins/cryptolib/: CMakeLists.txt
plugins/lla-tests/: CMakeLists.txt  myclock.cpp  subtest_tracker.cpp  subtest_tracker.hpp  utils.cpp  utils.hpp
plugins/pluginscards/: CMakeLists.txt
plugins/pluginsreaderproviders/: CMakeLists.txt
samples/basic/: CMakeLists.txt  basic.cpp
tests/: CMakeLists.txt
tests/other/: CMakeLists.txt  test_access_control_format_prox.cpp  test_iks_soft.cpp  test_islog_key_server.cpp
tests/pcsc-tests/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  CSCA-FRANCE-2015.cer  falseCert.cer  masterTest.ml  test_asn1.cpp  test_atrparser.cpp  test_bitsetstream.cpp  test_cl1356plus_utils.cpp  test_diversification.cpp  test_elapsed_time_counter.cpp  test_epass_utils.cpp  test_epass_verification_and_parsing.cpp  test_format.cpp  test_iks_bench.cpp  test_json_dump.cpp  test_key_storage.cpp  test_manchester.cpp  test_nfc_data_management.cpp  test_regex.cpp  test_signature.cpp  test_stid_prg_utils.cpp  test_tlv.cpp
(+2924 files in other folders)
